--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Colchoneria Obera</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="png" type="image" href="../src//app/assets/cropped-logo_verde-icono-300x300.webp">
-</head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+    <!doctype html>
+    <html lang="es">
+    <head>
+      <meta charset="utf-8">
+      <title>ColchoneriaFrontend</title>
+      <base href="/"> <!-- ¡ASEGÚRATE DE QUE ESTÉ ASÍ! -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="icon" type="image/x-icon" href="favicon.ico">
+    </head>
+    <body>
+      <app-root></app-root>
+    </body>
+    </html>
+    
