--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
     <html lang="es">
     <head>
       <meta charset="utf-8">
-      <title>ColchoneriaFrontend</title>
+      <title>El Galpon Obera </title>
       <base href="/"> <!-- ¡ASEGÚRATE DE QUE ESTÉ ASÍ! -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="icon" type="image/x-icon" href="favicon.ico">
+      <meta name="viewport" content="width=device-width, initial-scale=1"> 
+      <link rel="icon" type="image/png" href="assets/logo.png">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     </head>
     <body>
       <app-root></app-root>
