--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
       <base href="/"> <!-- ¡ASEGÚRATE DE QUE ESTÉ ASÍ! -->
       <meta name="viewport" content="width=device-width, initial-scale=1"> 
       <link rel="icon" type="image/png" href="assets/logo.png">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    </head>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <body>
       <app-root></app-root>
     </body>
