--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
-    <!doctype html>
-    <html lang="es">
-    <head>
-      <meta charset="utf-8">
-      <title>El Galpon Obera </title>
-      <base href="/"> <!-- ¡ASEGÚRATE DE QUE ESTÉ ASÍ! -->
-      <meta name="viewport" content="width=device-width, initial-scale=1"> 
-      <link rel="icon" type="image/png" href="assets/logo.png">
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <body>
-      <app-root></app-root>
-    </body>
-    </html>
-    
+<!doctype html> <!-- ¡ESTO DEBE SER LA PRIMERA LÍNEA! -->
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>El Galpon Obera</title> <!-- Título de la pestaña del navegador -->
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Asegúrate de que tu archivo logo.png esté en la carpeta src/assets/images/ -->
+  <link rel="icon" type="image/png" href="assets/images/logo.png"> <!-- Ruta corregida al logo como favicon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <!-- Si tienes un styles.css global, asegúrate de que esté aquí y no antes del doctype -->
+  <link rel="stylesheet" href="styles.css"> 
+</head>
+<body>
+  <app-root></app-root>
+</body>
+</html>
