--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Asegúrate de que tu archivo logo.png esté en la carpeta src/assets/images/ -->
-  <link rel="icon" type="image/png" href="assets/images/logo.png"> <!-- Ruta corregida al logo como favicon -->
+   <link rel="icon" type="image/png" href="galpon.png"> <!-- Ruta corregida al logo como favicon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <!-- Si tienes un styles.css global, asegúrate de que esté aquí y no antes del doctype -->
   <link rel="stylesheet" href="styles.css"> 
